<resources>
    <string name="app_name">TheHappyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Happy App</string>
    <string name="nav_header_subtitle">username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="COMPLETED">Completed Task</string>
    <string name="CHANGETASK">Change Task</string>
    <string name="TimeRemaining">Have you completed your task?</string>

    <string name="completed_message">Good Job!</string>string>
    <string name="next_task">The next task will appear in:</string>string>
    <string name="time_until_next">2 hours</string>string>

    <string name="streak">Score</string>
    <string name="streak_num">0 points</string>
    <string name="welcome_message">Welcome to The Happy App</string>
    <string name="select_task">Please select the type of task you would like to complete today</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>

    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choices">Please choose one of the following tasks to complete today:</string>
    <string name="no_task"> I do not want to complete a Happy Task today :(</string>

    <string name="tools_notification">Change Notification Settings</string>
</resources>
