<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="200dp">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choices"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textAlignment="center"
            />

        <Button android:id="@+id/button_choice1"
            android:layout_marginTop="10dp"
            style="@style/button_style"
            android:text="@string/choice_1"
            />

        <Button android:id="@+id/button_choice2"
            android:text="@string/choice_2"
            style="@style/button_style"/>

        <Button android:id="@+id/button_choice3"
            android:text="@string/choice_3"
            style="@style/button_style"/>

        <Button android:id="@+id/button_no_task"
            android:text="@string/no_task"
            style="@style/button_style"/>


    </LinearLayout>
</LinearLayout>