<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/streak"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/streak"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/smile_icon"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_weight="0.25"
                android:layout_gravity="center"
                android:src="@drawable/ic_smile"/>
            <TextView
                android:id="@+id/streak_num"
                android:layout_width="0dp"
                android:textSize="35sp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="end"
                android:text="@string/streak_num" />


        </LinearLayout>
        <ProgressBar
            android:id="@+id/streak_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:progress="60"
            android:progressTint="@color/buttons" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/welcome_message" />
        <TextView
            android:id="@+id/level_selection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/select_task" />
        <Button
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/easy"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/medium"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/hard"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>