<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/goodLuck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:inputType="textPersonName"
        android:text="@string/TimeRemaining" />

    <TextView
        android:id="@+id/placeholder"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="text" />

    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/completeButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:text="@string/COMPLETED"
        android:layout_gravity="center"
        android:background="@drawable/button"/>

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/changeTextButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/CHANGETASK"
        android:layout_gravity="center"
        android:background="@drawable/button"
        style="@style/Widget.AppCompat.Button"/>


</LinearLayout>
</LinearLayout>